[package]
name = "tutorial"
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2018"


[dependencies]
aptos-vm ={ git = "https://github.com/aptos-labs/aptos-core", rev = "5b525691957a59bf29a68b9b897142e1a351a7be" }
move-package = { git = "https://github.com/diem/move", rev = "8a260b82dda8175a98ea848fab5adcce467585b3" }
move-unit-test = { git = "https://github.com/diem/move", rev = "8a260b82dda8175a98ea848fab5adcce467585b3" }
move-cli = { git = "https://github.com/diem/move", rev = "8a260b82dda8175a98ea848fab5adcce467585b3" }

[lib]
